# python3-appsedu

appsedu/: appsedu.py
debian/: changelog  control  copyright  rules
src/: .appsedu.py.swp  .libAppsEdu.py.swp  appsedu.py  pyproject.toml
